[package]
name = "nozomi-lyrics"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
mpris = "2.0.0-rc2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.6"
lrc = { git = "https://github.com/L1AN0/lrc.git" }
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"

[[bin]]
name = "nozomi-lyrics"
path = "./src/bin/nozomi_lyrics.rs"